# eng-prot

./: .dockerignore  .gitignore  DOCKER.md  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
backend/src/apps/prototype/: main.py
backend/src/apps/prototype/config/: config.py
backend/src/apps/prototype/models/: models.py
backend/src/apps/prototype/routers/public/v1/: __init__.py  audio.py  chat.py  websocket.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/src/apps/chat/: audio_component.py  chat_component.py  ui.py
frontend/web/: README.md  app.js  config.js  index.html  package.json  styles.css
