[project]
name = "engprot"
version = "0.1.0"
description = ""
authors = [
    {name = "melnyk",email = "vm@scade.pro"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "groq (>=1.0.0,<2.0.0)",
    "websockets (>=14.0,<17.0.0)",
    "python-multipart (>=0.0.20,<0.1.0)",
    "environs (>=14.6.0,<15.0.0)",
    "streamlit-mic-recorder (>=0.0.8,<0.0.9)",
    "edge-tts (>=7.2.7,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
